Update quote in index.html

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="badge">সম্পূর্ণ</div>
       </div>
     </div>
-    <p style="margin-top: 2rem; color:#556b82; font-weight:500;">❝ বন্ধুত্বের মর্যাদা, প্রিমিয়াম গ্রে ❞</p>
+    <p style="margin-top: 2rem; color:#556b82; font-weight:500;">❝ a boy and a girl can never be friends ❞</p>
   </div>
 
   <!-- কন্টেন্ট এরিয়া -->
