--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-  <title>গ্রে প্রিমিয়াম · Lazina র সায়েন্স কোষ</title>
+  <title>For Lazina · সায়েন্স কোষ</title>
   <!-- Fonts & MathJax -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,400;14..32,500;14..32,600;14..32,700&family=Noto+Serif+Bengali:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
@@ -23,7 +23,7 @@
       width: 100%;
     }
 
-    /* ===== গ্রে প্রিমিয়াম থিম (উপযুক্ত মেজাজ) ===== */
+    /* ল্যান্ডিং */
     .landing-container {
       background: #ffffff;
       border-radius: 40px;
@@ -91,7 +91,7 @@
       border: 1px solid #b6c4d7;
     }
 
-    /* ===== কন্টেন্ট প্যানেল (প্রিমিয়াম গ্রে) ===== */
+    /* কন্টেন্ট প্যানেল */
     .science-content {
       background: #ffffff;
       border-radius: 38px 38px 30px 30px;
@@ -147,7 +147,7 @@
       font-weight: 500;
     }
 
-    /* --- রসায়ন টেবিল (গ্রেস্কেল) --- */
+    /* রসায়ন টেবিল */
     .search-bar { display: flex; gap: 1rem; flex-wrap: wrap; margin-bottom: 1.5rem; }
     .search-wrap { flex: 1; min-width: 220px; position: relative; }
     .search-wrap input {
@@ -174,7 +174,7 @@
     .charge-pos { color: #39735a; } .charge-neg { color: #b34040; }
     .num-col { font-family: 'JetBrains Mono', monospace; text-align: center; }
 
-    /* --- পদার্থবিদ্যা কার্ড (প্রিমিয়াম গ্রে টাচ) --- */
+    /* পদার্থবিদ্যা কার্ড */
     .physics-container { padding: 0.2rem 0; }
     .chapter-header {
       font-size: 1.5rem; font-weight: 700; color: #263d57;
@@ -187,7 +187,6 @@
       transition: 0.1s; box-shadow: 0 6px 12px #dee7f2;
     }
     .formula-card:hover { background: #f2f8ff; border-color: #9cb1cf; }
-    .f-title { font-weight: 700; color: #2f4a6e; margin-bottom: 0.6rem; font-size: 1.1rem; }
     .math-box {
       background: #ffffff; border: 1px solid #ccd9eb; border-radius: 24px;
       padding: 0.9rem; text-align: center; font-size: 1.1rem; overflow-x: auto;
@@ -198,10 +197,9 @@
       color: #28425e; border: 1px dashed #b7ceea; margin-top: 0.8rem;
       font-size: 0.95rem;
     }
-    .v { font-style: italic; color: #2d4c72; font-weight: 600; }
     .hidden { display: none !important; }
 
-    /* Lazina স্পেশাল গ্রে ফুটার */
+    /* Lazina ফুটার */
     .lazina-footer {
       background: #e6ecf5;
       border-radius: 60px;
@@ -219,11 +217,11 @@
 </head>
 <body>
 <div class="union-wrapper" id="unionApp">
-  <!-- গ্রে প্রিমিয়াম ল্যান্ডিং · Lazina -->
+  <!-- ল্যান্ডিং - সব "প্রিমিয়াম গ্রে" সরিয়ে দেওয়া হয়েছে -->
   <div id="landingPage" class="landing-container">
     <div class="landing-header">
-      <h1>⚛️ Lazina র সায়েন্স কোষ ⚛️</h1>
-      <p>প্রিমিয়াম গ্রে · বন্ধুর জন্য বিশেষ</p>
+      <h1> For Lazina </h1>
+      <p>Though demo friend,she is very special for Ahamed</p>
     </div>
     <div class="card-grid">
       <div class="choice-card" id="showChemistryBtn">
@@ -235,11 +233,12 @@
       <div class="choice-card" id="showPhysicsBtn">
         <div class="card-icon">📘</div>
         <h3>পদার্থ</h3>
-        <p>সমস্ত সূত্র · অধ্যায়ভিত্তিক ব্যাখ্যা</p>
+        <p>পদার্ব · প্ৰতিমুদ্রাম তত্ত্ব</p>
         <div class="badge">সম্পূর্ণ</div>
       </div>
     </div>
-    <p style="margin-top: 2rem; color:#556b82; font-weight:500;">❝ a boy and a girl can never be friends ❞</p>
+    <!-- বিশেষ ট্যাগলাইন: a boy and a girl can never be friends -->
+    <p style="margin-top: 2rem; color:#556b82; font-weight:600; font-style:italic; border-top:1px dashed #b7c4d6; padding-top:1.5rem;">❝ a boy and a girl can never be friends ❞</p>
   </div>
 
   <!-- কন্টেন্ট এরিয়া -->
@@ -249,13 +248,13 @@
       <span id="activeSubject">রসায়ন</span>
     </div>
     <div id="dynamicPanel" class="dynamic-panel"></div>
-    <div class="foot-note">🌿 Lazina · এক্সক্লুসিভ প্রিমিয়াম গ্রে 🌿</div>
+    <div class="foot-note">🌿 Lazina · এক্সক্লুসিভ সংস্করণ 🌿</div>
   </div>
 </div>
 
 <script>
 (function() {
-  // ---------- রসায়ন ডেটা (অপরিবর্তিত, পৃষ্ঠা নম্বর নেই) ----------
+  // ---------- রসায়ন ডেটা ----------
   const compounds = [
     [1,"ক্যালসিয়াম অক্সাইড (চুন)","\\(CaO\\)"],[2,"অ্যামোনিয়াম ক্লোরাইড (নিশাদল)","\\(NH_4Cl\\)"],[3,"অ্যালুমিনিয়াম হাইড্রোক্সাইড","\\(Al(OH)_3\\)"],[4,"ম্যাগনেসিয়াম হাইড্রোক্সাইড","\\(Mg(OH)_2\\)"],[5,"গ্লুকোজ","\\(C_6H_{12}O_6\\)"],[6,"ফ্রুক্টোজ","\\(C_6H_{12}O_6\\)"],[7,"সাক্সিনিক এসিড","—"],[8,"ম্যালেয়িক এসিড","—"],[9,"কার্বন ডাই-অক্সাইড","\\(CO_2\\)"],[10,"পানি","\\(H_2O\\)"],[11,"পটাশিয়াম পারম্যাঙ্গানেট","\\(KMnO_4\\)"],[12,"করপূর","\\(C_{10}H_{16}O\\)"],[13,"ন্যাপথলিন","\\(C_{10}H_8\\)"],[14,"অ্যালুমিনিয়াম ক্লোরাইড","\\(AlCl_3\\)"],[15,"সোডিয়াম ক্লোরাইড (খাদ্য লবণ)","\\(NaCl\\)"],[16,"অ্যামোনিয়া","\\(NH_3\\)"],[17,"মিথেন (প্রাকৃতিক গ্যাস)","\\(CH_4\\)"],[18,"হাইড্রোক্লোরিক এসিড","\\(HCl\\)"],[19,"সালফিউরিক এসিড","\\(H_2SO_4\\)"],[20,"ইউরিয়া","\\(NH_2CONH_2\\)"],[21,"সোডিয়াম নাইট্রেট","\\(NaNO_3\\)"],[22,"পটাশিয়াম ক্লোরাইড","\\(KCl\\)"],[23,"ক্যালসিয়াম ক্লোরাইড","\\(CaCl_2\\)"],[24,"সুক্রোজ (চিনি)","\\(C_{12}H_{22}O_{11}\\)"],[25,"কপার সালফেট (তুঁতে)","\\(CuSO_4 \\cdot 5H_2O\\)"],[26,"সোডিয়াম কার্বনেট","\\(Na_2CO_3\\)"],[27,"সিলভার ক্লোরাইড","\\(AgCl\\)"],[28,"ইথানল","\\(C_2H_5OH\\)"],[29,"মিথানল","\\(CH_3OH\\)"],[30,"কার্বন টেট্রাক্লোরাইড","\\(CCl_4\\)"],[31,"ম্যাগনেসিয়াম অক্সাইড","\\(MgO\\)"],[32,"সোডিয়াম হাইড্রাইড","\\(NaH\\)"],[33,"অ্যালুমিনিয়াম অক্সাইড","\\(Al_2O_3\\)"],[34,"অ্যালুমিনিয়াম সালফেট","\\(Al_2(SO_4)_3\\)"],[35,"ম্যাগনেসিয়াম ফসফেট","\\(Mg_3(PO_4)_2\\)"],[36,"অ্যামোনিয়াম ফসফেট","\\((NH_4)_3PO_4\\)"],[37,"ফেরাস সালফেট","\\(FeSO_4\\)"],[38,"বোরন নাইট্রাইড","\\(BN\\)"],[39,"প্রোপেন","\\(C_3H_8\\)"],[40,"বেরিলিয়াম ক্লোরাইড","\\(BeCl_2\\)"],[41,"বোরন ট্রাইফ্লোরাইড","\\(BF_3\\)"],[42,"ফসফরাস ট্রাইক্লোরাইড","\\(PCl_3\\)"],[43,"ফসফরাস পেন্টাক্লোরাইড","\\(PCl_5\\)"],[44,"লেড ক্লোরাইড","\\(PbCl_2\\)"],[45,"লেড টেট্রাক্লোরাইড","\\(PbCl_4\\)"],[46,"নাইট্রোজেন পেন্টোক্সাইড","\\(N_2O_5\\)"],[47,"সিলভার ক্লোরাইড","\\(AgCl\\)"],[48,"সোডিয়াম ফ্লোরাইড","\\(NaF\\)"],[49,"সোডিয়াম ব্রোমাইড","\\(NaBr\\)"],[50,"সোডিয়াম আয়োডাইড","\\(NaI\\)"],[51,"বোরন ট্রাইক্লোরাইড","\\(BCl_3\\)"],[52,"কিউপ্রাস ক্লোরাইড","\\(CuCl\\)"],[53,"কিউপ্রিক ক্লোরাইড","\\(CuCl_2\\)"],[54,"হাইড্রোজেন সালফাইড","\\(H_2S\\)"],[55,"সালফার ডাই-অক্সাইড","\\(SO_2\\)"],[56,"সালফার ট্রাই-অক্সাইড","\\(SO_3\\)"],[57,"নাইট্রিক এসিড","\\(HNO_3\\)"],[58,"ফসফরিক এসিড","\\(H_3PO_4\\)"],[59,"ম্যাঙ্গানিজ ডাই-অক্সাইড","\\(MnO_2\\)"],[60,"পটাশিয়াম ডাইক্রোমেট","\\(K_2Cr_2O_7\\)"],[61,"সোডিয়াম থায়োসালফেট","\\(Na_2S_2O_3\\)"],[62,"কিউপ্রাস আয়োডাইড","\\(CuI\\)"],[63,"নাইট্রিক অক্সাইড","\\(NO\\)"],[64,"ফেরাস ক্লোরাইড","\\(FeCl_2\\)"],[65,"ফেরিক ক্লোরাইড","\\(FeCl_3\\)"],[66,"সিলভার নাইট্রেট","\\(AgNO_3\\)"],[67,"বেরিয়াম ক্লোরাইড","\\(BaCl_2\\)"],[68,"বেরিয়াম সালফেট","\\(BaSO_4\\)"],[69,"জিংক সালফেট","\\(ZnSO_4\\)"],[70,"ম্যাগনেসিয়াম ক্লোরাইড","\\(MgCl_2\\)"],[71,"অ্যামোনিয়াম সায়ানেট","\\(NH_4CNO\\)"],[72,"ইথিন (ইথিলিন)","\\(C_2H_4\\)"],[73,"পলিথিন","\\((-CH_2-CH_2-)_n\\)"],[74,"ফেরিক অক্সাইড (মরিচা)","\\(Fe_2O_3 \\cdot nH_2O\\)"],[75,"সাইট্রিক এসিড","—"],[76,"ইথানয়িক এসিড (ভিনেগার)","\\(CH_3COOH\\)"],[77,"পটাশিয়াম হাইড্রোক্সাইড","\\(KOH\\)"],[78,"ফেরিক হাইড্রোক্সাইড","\\(Fe(OH)_3\\)"],[79,"কপার নাইট্রেট","\\(Cu(NO_3)_2\\)"],[80,"কপার হাইড্রোক্সাইড","\\(Cu(OH)_2\\)"],[81,"জিংক নাইট্রেট","\\(Zn(NO_3)_2\\)"],[82,"জিংক হাইড্রোক্সাইড","\\(Zn(OH)_2\\)"],[83,"ক্যালসিয়াম বাইকার্বনেট","\\(Ca(HCO_3)_2\\)"],[84,"সোডিয়াম বাইকার্বনেট","\\(NaHCO_3\\)"],[85,"কার্বনিক এসিড","\\(H_2CO_3\\)"],[86,"ফেরিক সালফেট","\\(Fe_2(SO_4)_3\\)"],[87,"ফেরাস অক্সাইড","\\(FeO\\)"],[88,"ক্যালসিয়াম সিলিকেট","\\(CaSiO_3\\)"],[89,"ক্রোমাউট","\\(FeO \\cdot Cr_2O_3\\)"],[90,"রুটাইল","\\(TiO_2\\)"],[91,"গ্যালেনা","\\(PbS\\)"],[92,"ম্যাগনেটাইট","\\(Fe_3O_4\\)"],[93,"লিমোনাইট","\\(Fe_2O_3 \\cdot 3H_2O\\)"],[94,"কপার পাইরাইট","\\(CuFeS_2\\)"],[95,"চালকোসাইট","\\(Cu_2S\\)"],[96,"হেমাটাইট","\\(Fe_2O_3\\)"],[97,"ক্যালামাইন","\\(ZnCO_3\\)"],[98,"জিংক ব্লেন্ড","\\(ZnS\\)"],[99,"সিন্নাবার","\\(HgS\\)"],[100,"বক্সাইট","\\(Al_2O_3 \\cdot 2H_2O\\)"],[101,"ইথেন","\\(C_2H_6\\)"],[102,"বিউটিন","\\(C_4H_8\\)"],[103,"পেন্টেন","\\(C_5H_{12}\\)"],[104,"সাইক্লোপ্রোপেন","\\(C_3H_6\\)"],[105,"সাইক্লোবিউটেন","\\(C_4H_8\\)"],[106,"বেনজিন","\\(C_6H_6\\)"],[107,"ইথাইন (এসিটিলিন)","\\(C_2H_2\\)"],[108,"ইথিলিন গ্লাইকল","\\((CH_2OH)_2\\)"],[109,"অ্যাডিপিক এসিড","\\(HOOC(CH_2)_4COOH\\)"],[110,"হেক্সামিথিলিন ডাই-অ্যামিন","\\(NH_2(CH_2)_6NH_2\\)"],[111,"নাইলন-৬,৬","—"],[112,"ল্যাকটিক এসিড","—"],[113,"পলিপ্রোপিন","—"],[114,"পলিভিনাইল ক্লোরাইড (PVC)","—"],[115,"সোডিয়াম হাইপোক্লোরাইট","\\(NaOCl\\)"],[116,"সোডিয়াম স্টিয়ারেট (সাবান)","\\(C_{17}H_{35}COONa\\)"],[117,"পটাশিয়াম স্টিয়ারেট","\\(C_{17}H_{35}COOK\\)"],[118,"স্টিয়ারিক এসিড","\\(C_{17}H_{35}COOH\\)"],[119,"অলিক এসিড","\\(C_{17}H_{33}COOH\\)"],[120,"অ্যামোনিয়াম কার্বামেট","\\(NH_2COONH_4\\)"],[121,"ক্লোরোফর্ম","\\(CHCl_3\\)"]
   ];
@@ -282,7 +281,7 @@
     MathJax.typesetPromise?.();
   }
 
-  // পদার্থবিদ্যা: পৃষ্ঠা নম্বর ছাড়া, প্রিমিয়াম গ্রে
+  // পদার্থবিদ্যা: পৃষ্ঠা নম্বর ছাড়া
   function renderPhysics() {
     let html=`<div class="physics-container">
       <div class="chapter-header">১. ভৌত রাশি ও পরিমাপ</div>${[
@@ -333,16 +332,16 @@
         ["C = \\frac{Q}{V},\\; C_{sphere} = \\frac{r}{k}","ধারকত্ব C, গোলকের ধারকত্ব"],
         ["U = \\frac{1}{2}CV^2 = \\frac{1}{2}QV = \\frac{Q^2}{2C}","ধারকে সঞ্চিত শক্তি U"]
       ].map(f=>`<div class="formula-card"><div class="math-box">$$${f[0]}$$</div><div class="desc">${f[1]}</div></div>`).join('')}
-      <!-- Lazina স্পেশাল ফুটার (গ্রে প্রিমিয়াম) -->
-      <div class="lazina-footer"><span>Lazina</span> · বন্ধুত্বের প্রিমিয়াম গ্রে সংস্করণ</div>
+      <!-- Lazina ফুটার -->
+      <div class="lazina-footer"><span>Lazina</span></div>
     </div>`;
     document.getElementById('dynamicPanel').innerHTML = html;
     MathJax.typesetPromise?.();
   }
 
   const landing=document.getElementById('landingPage'), content=document.getElementById('contentArea'), subjectSpan=document.getElementById('activeSubject');
-  document.getElementById('showChemistryBtn').addEventListener('click',()=>{landing.classList.add('hidden');content.classList.remove('hidden');subjectSpan.innerText='🧪 রসায়ন · প্রিমিয়াম গ্রে';renderChemistry();});
-  document.getElementById('showPhysicsBtn').addEventListener('click',()=>{landing.classList.add('hidden');content.classList.remove('hidden');subjectSpan.innerText='📘 পদার্থ · প্রিমিয়াম গ্রে';renderPhysics();});
+  document.getElementById('showChemistryBtn').addEventListener('click',()=>{landing.classList.add('hidden');content.classList.remove('hidden');subjectSpan.innerText='🧪 রসায়ন ';renderChemistry();});
+  document.getElementById('showPhysicsBtn').addEventListener('click',()=>{landing.classList.add('hidden');content.classList.remove('hidden');subjectSpan.innerText='📘 পদার্থ ';renderPhysics();});
   document.getElementById('backToMenuBtn').addEventListener('click',()=>{content.classList.add('hidden');landing.classList.remove('hidden');document.getElementById('dynamicPanel').innerHTML='';});
 })();
 </script>
